# datavis-study.github.io

./: .gitignore  404.html  README.md  generate_experiment2_stimuli.sh  global.json  index.html  package.json  vite.config.ts
analysis/: .Rhistory  README.md  export_s1b_pilots.sh  generate_report.sh  pyproject.toml  r_charts.R  report.md
analysis/data/: db.json  demographics.csv  participant_id_map.csv  participant_time_per_component.csv  participants.csv  questionnaire_likert_scores.csv  questionnaire_open_responses.csv  stimulus_badge_metrics.csv  stimulus_badge_participant_flags.csv  stimulus_badge_participant_metrics.csv  stimulus_notes.csv  stimulus_participant_metrics.csv
analysis/data/s1b/: likert.csv  preferences.csv  quick_reminder.csv  s1b-badges_all.csv  s1b-badges_all.json  s1b-footnotes_all.csv  s1b-footnotes_all.json
analysis/r_scripts/: badge_click_participant_counts.R  badge_drawer_time_participant_counts.R  badge_hover_click_participant_counts.R  badge_hover_participant_counts.R  badge_hover_participants.R  badge_hover_time_participant_counts.R  badge_interactions.R  badge_interactions_overview.R  likert_barplot.R  likert_mean_chart.R
analysis/reports/2025-12-06_15-52_sat/: report.md
analysis/reports/2025-12-06_15-53_sat/: report.md
analysis/reports/2025-12-06_15-57_sat/: report.md
analysis/reports/2025-12-06_15-59_sat/: report.md
analysis/reports/2025-12-07_13-26_sun/: report.md
analysis/reports/2025-12-07_13-32_sun/: report.md
analysis/reports/2025-12-07_14-14_sun/: report.md
analysis/reports/2025-12-07_14-35_sun/: report.md
analysis/reports/2025-12-07_14-41_sun/: report.md
analysis/reports/2025-12-07_14-46_sun/: report.md
analysis/reports/2025-12-07_14-57_sun/: report.md
analysis/reports/2025-12-07_15-01_sun/: report.md
analysis/reports/2025-12-07_15-08_sun/: report.md
analysis/reports/2025-12-07_15-11_sun/: report.md
analysis/s1b/: r_charts.R
analysis/src/data_prep/: io.py  (+12 more)
analysis/tools/: __init__.py
(+265 files in other folders)
