[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtb-analysis"
version = "0.0.1"
description = "Lowkey Analysis tools for Mind the Badge study"
requires-python = ">=3.10"
dependencies = [
	"pandas>=2.1",
	"matplotlib>=3.8",
	"seaborn>=0.13",
	"numpy>=1.26",
	"scipy>=1.11",
	"jinja2>=3.1"
]

[project.scripts]
mtb-export-time = "data_prep.export_time_spent:main"
mtb-export-notes = "data_prep.export_speech:main"
mtb-export-likert = "data_prep.export_questionnaire_likert:main"
mtb-export-open = "data_prep.export_questionnaire_open:main"
mtb-export-badges = "data_prep.export_badge_stats:main"
mtb-export-participants = "data_prep.export_participant_meta:main"
mtb-export-all = "data_prep:main_run_all"
mtb-generate-report = "reporting.generate_report:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_prep*", "reporting*", "charts*"]



